k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: uni-service

spec:
  selector:
    app: uni-frontend

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080

  type: NodePort
